fixed styling in voucher html, conditions agreement checkbox. Vertical and horizontal align and shadow of checkbox when clicking

--- a/wifi4eu-portal/wifi4eu-portal-web/src/main/angular/src/styles.scss
+++ b/wifi4eu-portal/wifi4eu-portal-web/src/main/angular/src/styles.scss
@@ -596,11 +596,18 @@ body {
 
 }
 
-.row.vertical-align {
-  display: flex;
-  align-items: center;
-  margin-top: 1em;
-
+.row {
+  .vertical-align {
+    display: flex;
+    align-items: center;
+    margin-top: 1em;
+  }
+  .row.conditions-agreement {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    color: $dark-grey;
+  }
 }
 
 .cancel-button {
